Changelog for UCDPloneSkin

UCDPloneSkin 2.2.4 - In progress - Nov 21 2007
   - Stylize the login portlet in case user re-enables it
   - Public draft content is no longer red in the navigation

UCDPloneSkin 2.2.3 - Released - Oct 11 2007
   - PloneLanguageTool is now a dependency to avoid problems (thanks Dewight)

UCDPloneSkin 2.2.2 - Released - Oct 04 2007
   - Updated copyright string to 2007

UCDPloneSkin 2.2.1 - Released - Sept 28 2007
   - set blockquote color to white

UCDPloneSkin 2.2 - Released - May 17 2007
   - option for trimming long bread crumb elements
     consider searching for the next white space and trim after that
   - embeded version number in html header (need to remember to update it)

UCDPloneSkin 2.1 - Released - May 9 2007
   - reverted to code for setting slots in installer due to 
     incompatibility with the PloneCASLogin product
   - minor fixes for html and css validation

UCDPloneSkin 2.0 - Released - May 7 2007
   - reverted to tables in portal header due to vert spacing issues
   - new favicon with transparency
   - fixed hideDeptName option
   - fixed live_search bug due to copying and pasting original code
   - updated print css for new nav

UCDPloneSkin 2.0rc7 - Pending - May 3 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - changed string comparision in nav class so that it works checks against 
      the url work with the virtual host monster

UCDPloneSkin 2.0rc6 - Pending - May 2 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - advanced and show all links in livesearch_reply.py link to portal root
      to avoid portal_tab dimming
    - renamed/reregistered css so users can use ploneCustom
  [ Scott Beardsley, scott@cse.ucdavis.edu ]
    - fix for bottom-border through middle of images

UCDPloneSkin 2.0rc5 - Pending - May 1 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - fixed bgImageNoRepeat submit bug
    - derived navigation class so "in this section" behaves with only one item