@@ -8,11 +8,7 @@ Install
   Click the 'Preferences' link in Plone, then click the 'Add/Remove Products'
   link.  Select the product, then click the 'Install' button.
 
-  This product is known to work with Plone 2.5.1, but should also work with
-  older versions.
-
-  Please note that Plone 2.5.1 has a security flaw and the hotfix should be
-  applied. See http://plone.org/products/plone-hotfix/releases/20061031/
+  This product is known to work with Plone 2.5.x.
 
   See https://svn.cse.ucdavis.edu/trac/UCDPloneSkin/wiki/Install for the
   latest installation instructions.
@@ -30,11 +26,6 @@ Further Customization
   Use the "Exclude From Navigation" property of any Plone object if you want
   to prevent it from showing up in those navigation elements.
 
-  You have the option of blue or gold portal_tabs.  If you want to switch to
-  blue tabs, open UCDPloneSkin/skins/ucdploneskin/ploneCustom.css.dtml and
-  look for the commented portal-globalnav styles.  Maybe we'll add the option
-  to have two rows of tabs in the future.
-
   If you find a need to rename the home page or specify a different object as
   the home page, please use the ZMI to make sure the short name is
   "front-page".  The name is used in a few conditional statements that
@@ -47,25 +38,9 @@ Further Customization
   needs to match the object Id so we can determine which tab is currently
   selected, compare, and dim the selected tab.
 
-  Also regarding the portal_tabs, if you have a "content item selected as
-  default view" in one of the folders that represents a portal_tab, it should
-  have the same short name as the folder.  For instance, let's say I have a
-  portal tab with an Id of foo.  It links to a folder with a short name of foo.
-  If I create a page to serve as the default for that folder, it's short name
-  should also be foo.  If not, the tab won't be dimmed properly.
-
-  During the installation of this skin an attempt is made at hiding the Join
-  link, although it seems to fail occasionaly.  I assume most departments don't
-  want to open the portal membership to the general public and will probably
-  use alternative authentication, such as CAS.  If you wish to show the Join
-  link, remove the files UCDPloneSkin/skins/ucdploneskin/join_form.*.  Also,
-  use the ZMI to navigate to portal_registration, find the Join action,
-  select Visable and click Save.
-
-  Speaking of CAS, if you use install PloneCASLogin after installing this skin,
-  it will add a portlet_login item to the left slot.  To remove this, go to the
-  ZMI and go to your plone site's property tab.  There you can clear the left
-  slot.
+  If you install PloneCASLogin after installing this skin, it will add a
+  portlet_login item to the left slot.  To remove this, go to the ZMI and go
+  to your plone site's property tab.  There you can clear the left slot.
 
   Also, if you use CAS you should consider turning off member folder creation
   in portal_membership.  If you don't, random CAS users will have valid member
@@ -90,8 +65,6 @@ Credits
 Known Issues
   
   The spacing doesn't exactly match the original template
-
-  There is a very small gap in between the portal tabs and the bottom border
 
   There is a 1px gap between Quick Links and In This Section <li> elements
 
