@@ -3,6 +3,7 @@ Changelog for UCDPloneSkin
 UCDPloneSkin 2.2.4 - In progress - Nov 21 2007
    - Stylize the login portlet in case user re-enables it
    - Public draft content is no longer red in the navigation
+   - Improved selected tab detection
 
 UCDPloneSkin 2.2.3 - Released - Oct 11 2007
    - PloneLanguageTool is now a dependency to avoid problems (thanks Dewight)
